More basic porting work - some entities, items, advancements, other misc.